--- a/action-glitch/Dockerfile
+++ b/action-glitch/Dockerfile
@@ -2,7 +2,7 @@ FROM node:lts
 
 LABEL "com.github.actions.name"="Hello World"
 LABEL "com.github.actions.description"="Write arguments to the standard output"
-LABEL "com.github.actions.icon"="mic"
+LABEL "com.github.actions.icon"="box"
 LABEL "com.github.actions.color"="purple"
 
 LABEL "repository"="http://github.com/octocat/hello-world"
